--- a/.gitignore
+++ b/.gitignore
@@ -1,129 +1,94 @@
-# Byte-compiled / optimized / DLL files
-__pycache__/
-*.py[cod]
-*$py.class
+# Created by https://www.toptal.com/developers/gitignore/api/emacs
+# Edit at https://www.toptal.com/developers/gitignore?templates=emacs
 
-# C extensions
-*.so
+### Emacs ###
+# -*- mode: gitignore; -*-
+*~
+\#*\#
+/.emacs.desktop
+/.emacs.desktop.lock
+*.elc
+auto-save-list
+tramp
+.\#*
 
-# Distribution / packaging
-.Python
-build/
-develop-eggs/
+# Org-mode
+.org-id-locations
+*_archive
+
+# flymake-mode
+*_flymake.*
+
+# eshell files
+/eshell/history
+/eshell/lastdir
+
+# elpa packages
+/elpa/
+
+# reftex files
+*.rel
+
+# AUCTeX auto folder
+/auto/
+
+# cask packages
+.cask/
 dist/
-downloads/
-eggs/
-.eggs/
-lib/
-lib64/
-parts/
-sdist/
-var/
-wheels/
-pip-wheel-metadata/
-share/python-wheels/
-*.egg-info/
-.installed.cfg
-*.egg
-MANIFEST
 
-# PyInstaller
-#  Usually these files are written by a python script from a template
-#  before PyInstaller builds the exe, so as to inject date/other infos into it.
-*.manifest
-*.spec
+# Flycheck
+flycheck_*.el
 
-# Installer logs
-pip-log.txt
-pip-delete-this-directory.txt
+# server auth directory
+/server/
 
-# Unit test / coverage reports
-htmlcov/
-.tox/
-.nox/
-.coverage
-.coverage.*
-.cache
-nosetests.xml
-coverage.xml
-*.cover
-*.py,cover
-.hypothesis/
-.pytest_cache/
+# projectiles files
+.projectile
 
-# Translations
-*.mo
-*.pot
+# directory configuration
+.dir-locals.el
 
-# Django stuff:
-*.log
-local_settings.py
-db.sqlite3
-db.sqlite3-journal
+# network security
+/network-security.data
 
-# Flask stuff:
-instance/
-.webassets-cache
 
-# Scrapy stuff:
-.scrapy
+# End of https://www.toptal.com/developers/gitignore/api/emacs
 
-# Sphinx documentation
-docs/_build/
+# Created by https://www.toptal.com/developers/gitignore/api/c++
+# Edit at https://www.toptal.com/developers/gitignore?templates=c++
 
-# PyBuilder
-target/
+### C++ ###
+# Prerequisites
+*.d
 
-# Jupyter Notebook
-.ipynb_checkpoints
+# Compiled Object files
+*.slo
+*.lo
+*.o
+*.obj
 
-# IPython
-profile_default/
-ipython_config.py
+# Precompiled Headers
+*.gch
+*.pch
 
-# pyenv
-.python-version
+# Compiled Dynamic libraries
+*.so
+*.dylib
+*.dll
 
-# pipenv
-#   According to pypa/pipenv#598, it is recommended to include Pipfile.lock in version control.
-#   However, in case of collaboration, if having platform-specific dependencies or dependencies
-#   having no cross-platform support, pipenv may install dependencies that don't work, or not
-#   install all needed dependencies.
-#Pipfile.lock
+# Fortran module files
+*.mod
+*.smod
 
-# PEP 582; used by e.g. github.com/David-OConnor/pyflow
-__pypackages__/
+# Compiled Static libraries
+*.lai
+*.la
+*.a
+*.lib
 
-# Celery stuff
-celerybeat-schedule
-celerybeat.pid
+# Executables
+*.exe
+*.out
+*.app
 
-# SageMath parsed files
-*.sage.py
-
-# Environments
-.env
-.venv
-env/
-venv/
-ENV/
-env.bak/
-venv.bak/
-
-# Spyder project settings
-.spyderproject
-.spyproject
-
-# Rope project settings
-.ropeproject
-
-# mkdocs documentation
-/site
-
-# mypy
-.mypy_cache/
-.dmypy.json
-dmypy.json
-
-# Pyre type checker
-.pyre/
+# End of https://www.toptal.com/developers/gitignore/api/c++
